force-app/main/default/objects/Additional_Charges__c/fields/Total_Additional_Charge__c.field-meta.xml
<CustomField>
    <fullName>Total_Additional_Charge__c</fullName>
    <formula>(Amount__c) * (1 + GST__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total Additional Charge</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>