force-app/main/default/objects/Additional_Charges__c/fields/Type__c.field-meta.xml
<CustomField>
    <fullName>Type__c</fullName>
    <label>Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Security Deposit</fullName>
            </value>
            <value>
                <fullName>Interior Deposit</fullName>
            </value>
            <value>
                <fullName>Legal Charge</fullName>
            </value>
            <value>
                <fullName>Modification Charge</fullName>
            </value>
            <value>
                <fullName>Maintenance Charge</fullName>
            </value>
            <value>
                <fullName>Gas Pipeline Charges</fullName>
            </value>
            <value>
                <fullName>Water Connection Charges</fullName>
            </value>
            <value>
                <fullName>Miscellaneous Charge</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>